--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -25,6 +25,7 @@
 
 \renewcommand{\d}{\partial}
 \renewcommand{\nomname}{List of Abbreviations}
+\renewcommand{\lstlistingname}{Algorithm}
 % \renewcommand{\notetoself{}}{\emph{\textcolor{red}{}}}
 
 \setlength{\headheight}{15pt}
